@@ -119,58 +119,3 @@ def _getZopeConfigurationFile(relative_path="", mode="r"):
     raise IOError, 'The file: %s does not exist.' % file_path
 
   return open(file_path, mode)
-
-# XXX This method is a copy and paste of IntrospectionTool.setProductPath
-# This should be kept until versions lower than 5.4.3 still supported. 
-def setProductPath(self, relative_path):
-  """
-    Set the value of SOFTWARE_HOME for zopectl startup script
-    or from zope.conf (whichever is most relevant)
-
-    Rationale: multiple versions of Products can be present
-    on the same system
-
-    relative_path is usually defined by a number of release 
-     (ex. 5.4.2)
-
-    WARNING: the list of possible path should be protected 
-    if possible (ex. /etc/erp5/product)
-  """
-  # XXX Local to remove "self"
-  config = _loadExternalConfig()
-  allowed_path_list = config.get("main", "products").split("\n")
-  base_product_path_list = config.get("base", "base_product_path").split("\n")
-  if len(base_product_path_list) == 0:
-    raise Unauthorized(
-             "base_product_path_list is not defined into configuration.")
-
-  base_product_path = base_product_path_list[0]
-  path = base_product_path + relative_path
-
-  if path not in allowed_path_list:
-    raise Unauthorized(
-               "You are setting one Unauthorized path as Product Path (%s)." \
-                        % (path))
-
-  # XXX Local to remove "self"
-  config_file = _getZopeConfigurationFile("etc/zope.conf")
-  new_file_list = []
-  ignore_list = ['parts/cmf15', "parts/products-deps" , "parts/products-other"]
-  for line in config_file:
-    new_line = line
-    #if line.strip(" ").startswith("products %s" % (base_product_path)):
-    if line.strip(" ").startswith("products"):
-      # Only comment the line, so it can easily reverted 
-      if len([i for i in ignore_list if i in line]) == 0:
-        new_line = "#%s" % (line)
-    new_file_list.append(new_line)
-  new_file_list.append("products %s\n" % (path))
-  config_file.close()    
-
-  # reopen file for write
-  # XXX Local to remove "self"
-  config_file = _getZopeConfigurationFile("etc/zope.conf", "w")
-  config_file.write("".join(new_file_list))
-  config_file.close()
-  return 
-
