@@ -1,96 +1,0 @@
-<?xml version="1.0"?>
-<ZopeData>
-  <record id="1" aka="AAAAAAAAAAE=">
-    <pickle>
-      <global name="PythonScript" module="Products.PythonScripts.PythonScript"/>
-    </pickle>
-    <pickle>
-      <dictionary>
-        <item>
-            <key> <string>Script_magic</string> </key>
-            <value> <int>3</int> </value>
-        </item>
-        <item>
-            <key> <string>_bind_names</string> </key>
-            <value>
-              <object>
-                <klass>
-                  <global name="NameAssignments" module="Shared.DC.Scripts.Bindings"/>
-                </klass>
-                <tuple/>
-                <state>
-                  <dictionary>
-                    <item>
-                        <key> <string>_asgns</string> </key>
-                        <value>
-                          <dictionary>
-                            <item>
-                                <key> <string>name_container</string> </key>
-                                <value> <string>container</string> </value>
-                            </item>
-                            <item>
-                                <key> <string>name_context</string> </key>
-                                <value> <string>context</string> </value>
-                            </item>
-                            <item>
-                                <key> <string>name_m_self</string> </key>
-                                <value> <string>script</string> </value>
-                            </item>
-                            <item>
-                                <key> <string>name_subpath</string> </key>
-                                <value> <string>traverse_subpath</string> </value>
-                            </item>
-                          </dictionary>
-                        </value>
-                    </item>
-                  </dictionary>
-                </state>
-              </object>
-            </value>
-        </item>
-        <item>
-            <key> <string>_body</string> </key>
-            <value> <string>"""\n
-  Update Product Path in zope.conf\n
-\n
-  ERP5Site_getSystemSignatureDict and ERP5Site_setProductPath are \n
-  used to keep backward compatibility with newer implementations.\n
-"""\n
-\n
-signature = context.ERP5Site_getUpgraderSignature()\n
-try:\n
-  product_version = context.portal_introspections.getSystemSignatureDict()[\'erp5\']\n
-except:\n
-  # Try to use externals instead because portal_introspections is not available.\n
-  product_version = context.ERP5Site_getSystemSignatureDict()[\'erp5\']\n
-\n
-if product_version == signature["release"]:\n
-  return []\n
-\n
-if not upgrade:\n
-  return ["Upgrade required for Products. Current: %s , Expect %s" % (\n
-            product_version, signature["release"]) ]\n
-\n
-context.ERP5Site_beforeUpgradeProductPath()\n
-\n
-try:\n
-  context.portal_introspections.setProductPath(signature["release"])\n
-except:\n
-  # Try to use externals instead because portal_introspections is not available.\n
-  context.ERP5Site_setProductPath(signature["release"])\n
-\n
-return ["Upgraded Product Path List to %s" % (signature["release"])]\n
-</string> </value>
-        </item>
-        <item>
-            <key> <string>_params</string> </key>
-            <value> <string>upgrade=0</string> </value>
-        </item>
-        <item>
-            <key> <string>id</string> </key>
-            <value> <string>ERP5Site_upgradeProductPath</string> </value>
-        </item>
-      </dictionary>
-    </pickle>
-  </record>
-</ZopeData>
